dev/brdb.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: br-backend
  labels:
    app: br-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: br-backend
  template:
    metadata:
      labels:
        app: br-backend
    spec:
      containers:
        - name: br-backend
          image: 162.19.66.30:7000/brbackend
          ports:
            - containerPort: 5500
