dev/brmysql.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: brmysql
  labels:
    app: brmysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: brmysql
  template:
    metadata:
      labels:
        app: brmysql
    spec:
      containers:
      - name: brmysql
        image: mysql:5.7.38
        ports:
          - containerPort: 3306
        volumeMounts:
        - mountPath: "/var/lib/mysql/data"
          name: brmysql-pv
      volumes:
        - name: brmysql-pv
          persistentVolumeClaim:
            claimName: brmysql-pvc
