dev/jenkins.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-svc
  labels:
    app: jenkins-svc
spec:
  selector:
    app: jenkins
  ports:
    - port: 8080
      targetPort: 8080
