dev/jenkins.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  labels:
    app: ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
  namespace: default
spec:
  rules:
  - host: jenkins.dashboard
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jenkins-svc
            port: 
              number: 8080
